--- a/styles/components/tour/tour_button.css
+++ b/styles/components/tour/tour_button.css
@@ -1,7 +1,11 @@
 .tour-button {
     @apply z-10;
+}
 
-    & .tour-button__btn {
-        @apply btn btn-primary;
-    }
+.tour-button__btn {
+    @apply btn btn-primary gap-2;
+}
+
+.tour-button__icon {
+    @apply text-lg;
 }
