--- a/styles/components/logo.css
+++ b/styles/components/logo.css
@@ -1,11 +1,8 @@
 .logo {
     @apply flex items-center;
+}
 
-    & img {
-        @apply object-contain transition-transform duration-300 ease-in-out;
-
-        &:hover {
-            @apply transform scale-110;
-        }
-    }
+.logo__image {
+    @apply object-contain transition-transform duration-300;
+    @apply hover:scale-110;
 }
